--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@ Thank you for the note you gave me back at USC, I still have it. You and everyon
 <p>
 Peyton S.
 </p>
+<p>
+  P.S This was written quickly, I apologize for any grammar/spelling mistakes
+  </p>
 </body>
 </html>
